--- a/JavaScript/sorteiopergunta.html
+++ b/JavaScript/sorteiopergunta.html
@@ -233,183 +233,183 @@
             resposta: "a) Mercúrio, Vênus, Terra, Marte, Júpiter, Saturno, Urano e Netuno"
         },
         {
-            pergunta: "",
+            pergunta: "Qual planeta do nosso Sistema Solar é conhecido como a Estrela d'Alva?<br>a) Marte<br>b) Júpiter<br>c) Vênus",
+            resposta: "c) Vênus"
+
+        },
+        {
+            pergunta: "Como é chamado o corpo celeste, decorrente de uma explosão de uma supernova, com um intenso campo magnético?<br>a) Pulsar<br>b) Magnetar<br>c) Estrela de Nêutron",
+            resposta: "b) Magnetar"
+
+        },
+        {
+            pergunta: "Qual o nome das duas estrelas mais brilhantes da constelação de Gêmeos?<br>a) Castor e Pollux<br>b) Alfa e Beta<br>c) Alfa e Gêmeos",
+            resposta: "a) Castor e Pollux"
+
+        },
+        {
+            pergunta: "Qual o nome do centro de um buraco negro de onde a luz é incapaz de sair?<br>a) Parede<br>b) Espaço Tempo<br>c) Horizonte de eventos",
+            resposta: "c) Horizonte de eventos"
+
+        },
+        {
+            pergunta: "As estrelas mais quentes do Universo tem como coloração?<br>a) Vermelha<br>b) Azul<br>c) Amarela",
+            resposta: "b) Azul"
+
+        },
+        {
+            pergunta: "Oficialmente, o Sistema Solar possui atualmente quantos planetas?<br>a) 8<br>b) 9<br>c) 10",
+            resposta: "a) 8"
+
+        },
+        {
+            pergunta: "Hidrogênio e Hélio são os dois principais componentes de qual astro do Sistema Solar?<br>a) Sol<br>b) Lua<br>c) Marte",
+            resposta: "a) Sol"
+
+        },
+        {
+            pergunta: "Quais o nomes corretos das fases da lua?<br>a) Nova, crescente, cheia e minguante<br>b) Velha, crescente, cheia e mingua<br>c) Nova, crescente, cheia e mingua",
+            resposta: "a) Nova, crescente, cheia e minguante"
+
+        },
+        {
+            pergunta: "Qual a maior estrela do sistema solar?<br>a) Lua<br>b) Sol<br>c) Júpiter",
+            resposta: "b) Sol"
+
+        },
+        {
+            pergunta: "Planeta mais próximo da estrela Sol?<br>a) Mercúrio<br>b) Marte<br>c) Terra",
+            resposta: "a) Mercúrio"
+
+        },
+        {
+            pergunta: "No Sistema Solar existem planetas que possuem como característica a presença de anéis, quais são eles?<br>a) Saturno e Netuno.<br>b) Júpiter, Saturno, Urano e Netuno<br>c) Júpiter e Terra",
+            resposta: "b) Júpiter, Saturno, Urano e Netuno"
+
+        },
+        {
+            pergunta: "Há diversas teorias que explicam o surgimento do Sistema Solar. A principal delas é a:<br>a) a) Teoria da Tectônica de Placas<br>b) Teoria da Nebulosa Solar<br>c) Teoria da Deriva Continental",
+            resposta: "b) Teoria da Nebulosa Solar"
+
+        },
+        {
+            pergunta: "O Sistema Solar é formado por um conjunto de oito planetas. Qual das alternativas abaixo NÃO apresenta um dos planetas que formam esse sistema?<br>a) Plutão<br>b) Marte<br>c) Netuno",
             resposta: ""
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Qual é o planeta que registra as maiores temperaturas dentre os constituintes do Sistema Solar?<br>a) Mercúrio<br>b) Marte<br>c) Vênus",
+            resposta: "c) Vênus"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Qual é o maior planeta em dimensão do Sistema Solar?<br>a) Júpiter<br>b) Saturno<br>c) Urano",
+            resposta: "a) Júpiter"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Como são denominados corretamente os meteoroides que, após romperem a atmosfera terrestre, atingem a superfície terrestre?<br>a) Asteróides<br>b) Meteoritos<br>c) Cometas",
+            resposta: "b) Meteoritos"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "O planeta __________ é conhecido pelos seus anéis, grandes estruturas cósmicas, formadas por fragmentos de gelo e rocha. Qual alternativa completamenta adequadamente a lacuna?<br>a) Saturno<br>b) Urano<br>c) Netuno",
+            resposta: "a) Saturno"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "A Terra realiza diversas movimentações, assim como vários outros astros do Sistema Solar. O movimento de rotação provoca, por exemplo, a:<br>a) Noite e o dia<br>b) Formação de terremotos<br>c) Movimento das mares",
+            resposta: "a) Noite e o dia"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "O movimento terrestre que a Terra realiza em torno do Sol e que dura aproximadamente um ano civil é chamado de<br>a) Rotação<br>b) Translação<br>c) Precessão",
+            resposta: "b) Translação"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Os eclipses solar e lunar são fenômenos astronômicos que ocorrem sob determinadas condições naturais. A época de ocorrência, a duração e as circunstâncias desses eclipses dependem da geometria variável do sistema Terra-lua-Sol. As fases da lua em que ocorrem os eclipses solar e lunar, respectivamente, são<br>a) Cheia e Miguante<br>b) Nova e minguante<br>c) Nova e Cheia",
+            resposta: "c) Nova e Cheia"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "________ Foi o primeiro instrumento utilizado para o estudo dos astros. A partir dele, os astrônomos puderam observar os movimentos dos astros e calcular a distância entre a Terra e o Sol.<br>a) Relógio de Sol<br>b) Astrolábio<br>c) Telescópio",
+            resposta: "c) Telescópio"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Em 2015, foi descoberto que em Encélado (lua de Saturno) existe uma substância que conhecemos bem na Terra. Que substância é essa?<br>a) Água<br>b) Petróleo<br>c) Rocha",
+            resposta: "a) Água"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Ceres, astro com dois pontos brilhantes em sua superfície, foi formado onde?<br>a) Fora da Via Láctea<br>b) Próxima à Netuno<br>c) No Cinturão de Asteróides",
+            resposta: "c) No Cinturão de Asteróides"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Qual a temperatura no núcleo do Sol?<br>a) 5 milhões graus Celsius<br>b) 15 milhões graus Celsius<br>c) 100 mil graus Celsius",
+            resposta: "b) 15 milhões graus Celsius"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Quando o ciclo de vida das estrelas se inicia?<br>a) com a junção de gases nas nebulosas<br>b) Elas surgem absolutamente do nada<br>c) Elas se formam graças a emissão de gases (CO2) dos seres humanos",
+            resposta: "a) com a junção de gases nas nebulosas"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Quando a temperatura é alta o suficiente, essa enorme bola de gás começa a emitir luz e o hidrogênio começa a queimar. Qual é o nome desse processo?<br>a) Fissão Estelar <br>b) Fusão Núclear<br>c) Fagocitose",
+            resposta: "b) Fusão Núclear"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "O que leva uma estrela a sua morte?<br>a) O excesso de energia núclear em seu núcleo<br>b) A perca pelo interesse da vida<br>c) O excesso de átomos em seu núcleo",
+            resposta: "a) O excesso de energia núclear em seu núcleo"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Quanto maior for a massa de uma estrela:<br>a) Maior será a sua vida<br> Menor será a sua luz<br> c) Mais breve será sua infância e vida adulta",
+            resposta: "c) Mais breve será sua infância e vida adulta"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Durante a fase inicial de vida, a estrela esteve queimando hidrogênio no núcleo, em que ele se transforma?<br>a) Em massa<br>b) Em Oxigênio<br>c) Em Hélio",
+            resposta: "c) Em Hélio"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "A classificação de um corpo celeste em um planeta requer um conjunto de características definidas pelas reuniões da Assembleia Geral da União Astronômica Internacional, que ocorre periodicamente. Qual alternativa indica uma característica necessária para a definição de um planeta do Sistema Solar?<br>a) Ter um satélite natural<br>b) Ter um núcleo rochoso<br>c) Realizar translação em torno do Sol",
+            resposta: "c) Realizar translação em torno do Sol"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Os planetas do Sistema Solar podem ser classificados conforme a sua composição. Com base nessa classificação, pode-se afirmar que são planetas rochosos:<br>a) Mercúrio, Marte, Vênus e Terra<br>b) Marte, Júpiter e Saturno<br>c) Urano, Netuno e Plutão",
+            resposta: "a) Mercúrio, Marte, Vênus e Terra"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Os planetas gasosos são compostos por gases, como hidrogênio e hélio. Qual o nome do maior planeta gasoso do Sistema Solar?<br>a) Saturno<br>b) Júpiter<br>c) Urano",
+            resposta: "b) Júpiter"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Nos últimos anos, surgiu nas redes sociais do Brasil um movimento conhecido como terraplanistas, que é formado por um grupo de pessoas que acreditam que a Terra é plana. A refutação a essa ideia pode ser explicada através de qual fenômeno?<br>a) Aurora Boreal<br>b) Eclipse<br>c) Efeito Estufa",
+            resposta: "b) Eclipse"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Depois de, aproximadamente, 11 minutos, a energia do Sol chega à Terra. Já que o Sol é muito maior que a Terra, os raios chegam praticamente paralelos entre si. Essa energia emitida pela estrela, importantíssima para a compreensão dos fenômenos meteorológicos e climáticos, é também denominada:<br>a) Radiação por ondas curtas<br>b) Irradiação turbulenta<br>c) Radiação por ondas longas",
+            resposta: "a) Radiação por ondas curtas"
 
         },
         {
-            pergunta: "",
-            resposta: ""
+            pergunta: "Existem diversas expressões que são geralmente empregadas na relação Terra-Sol, tais como afélio, equinócios, solstícios, eclíptica, periélio etc. O afélio é:<br>a) O ponto mais próximo da Terra ao Sol<br>b) O ponto em que a Terra se desprende da gravidade imposta pelo Sol<br>c) O ponto mais distante da Terra ao Sol",
+            resposta: "c) O ponto mais distante da Terra ao Sol"
 
         },
         {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
-
-        },
-        {
-            pergunta: "",
-            resposta: ""
+            pergunta: "O Universo é composto por diversos sistemas estelares, como o Sistema Solar. O Sistema Solar é formado por:<br>a) Um único planeta<br>b) Um único satélite natural<br>c) Planetas e outros corpos celestes",
+            resposta: "c) Planetas e outros corpos celestes"
 
         },
     ]
