--- a/JavaScript/sorteiopergunta.html
+++ b/JavaScript/sorteiopergunta.html
@@ -155,8 +155,8 @@
             resposta: "b) Mercúrio"
         },
         {
-            pergunta: "Qual é o planeta mais distante do Sol?<br>a) Terra<br>b) Mercúrio<br>c) Vênus",
-            resposta: "c) Vênus"
+            pergunta: "Qual é o planeta mais distante do Sol?<br>a) Terra<br>b) Mercúrio<br>c) Nétuno",
+            resposta: "c) Nétuno"
         },
         {
             pergunta: "Qual o nome dado ao escudo natural produzido pela estrela Sol, que protege os planetas do sistema de ventos solares, também conhecida como a fronteira do Sistema Solar com o universo<br>a) Heliopausa<br> b) Hidrosfera<br>c) Heliosfera",
@@ -200,7 +200,7 @@
             resposta: "b) Júpiter e Marte"
         },
         {
-            pergunta: "<br>a) Eclipse<br>b) Lua Cheia<br>c) Lua Nova",
+            pergunta: "Trata-se do fenômeno que ocorre quando um corpo celeste interpõe-se entre outro corpo celeste e uma fonte de luz<br>a) Eclipse<br>b) Lua Cheia<br>c) Lua Nova",
             resposta: "a) Eclipse"
 
         },
@@ -294,7 +294,7 @@
         },
         {
             pergunta: "O Sistema Solar é formado por um conjunto de oito planetas. Qual das alternativas abaixo NÃO apresenta um dos planetas que formam esse sistema?<br>a) Plutão<br>b) Marte<br>c) Netuno",
-            resposta: ""
+            resposta: "a) Plutão"
 
         },
         {
@@ -363,12 +363,12 @@
 
         },
         {
-            pergunta: "O que leva uma estrela a sua morte?<br>a) O excesso de energia núclear em seu núcleo<br>b) A perca pelo interesse da vida<br>c) O excesso de átomos em seu núcleo",
+            pergunta: "Como sabemos, e somos acostumados tudo tem seu início, meio e fim, com as estrelas não é diferente. O que leva uma estrela a sua morte?<br>a) O excesso de energia núclear em seu núcleo<br>b) A perca pelo interesse da vida<br>c) O excesso de átomos em seu núcleo",
             resposta: "a) O excesso de energia núclear em seu núcleo"
 
         },
         {
-            pergunta: "Quanto maior for a massa de uma estrela:<br>a) Maior será a sua vida<br> Menor será a sua luz<br> c) Mais breve será sua infância e vida adulta",
+            pergunta: "Quanto maior for a massa de uma estrela:<br>a) Maior será a sua vida<br>b) Menor será a sua luz<br> c) Mais breve será sua infância e vida adulta",
             resposta: "c) Mais breve será sua infância e vida adulta"
 
         },
