--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div> 
 
         <div id="imagem">
-            <img id="imgjogo" src="img/background.jpg" alt="">
+            <img id="imgjogo" src="img/background.jpg" width="10px" height="10px" alt="">
         </div>
     </div>
 </body>
