--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="JavaScript/dado.js"></script>
     <script src="JavaScript/sorte.js"></script>
     <script src="JavaScript/time.js"></script>
+    <script src="JavaScript/winners.js"></script>
 </head>
 <body>
     <!-- PARA FINS DE EXEMPLO, OPTEI POR NÃO UTILIZAR 'FOR' E 'ALT' -->
@@ -45,6 +46,8 @@
         <div id="imagem">
             <img id="imgjogo" src="img/background.jpg" width="10px" height="10px" alt="">
         </div>
+        <div id="div_duvida">
+            <img id="duvida" src="img/duvida.png" alt="" onclick="sorteioduvida()">
     </div>
 </body>
 </html>
