--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <h4 id="pergunta">Perguntas</h4>
         </div> 
         <div id="div_duvida">
-            <img id="duvida" src="img/procurar.png" width="70px" height="70px" alt="" onclick="regras()">
+            <img id="duvida" src="img/cuidado.png" width="70px" height="70px" alt="" onclick="regras()">
         </div> 
 
         <div id="imagem">
-            <img id="imgjogo" src="img/background.jpg" width="10px" height="10px" alt="">
+            <img id="imgjogo" src="img/background.jpg" alt="">
         </div>
 
     </div>
