tirando minha marca

--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
 
             </div>
 
-        <span class="footer__copy">&#169; Daniel Rodrigues - Desenvolvedor</span>
+        <span class="footer__copy">&#169; Capau - Developers</span>
 </body>
 </html>
