--- a/localhost/index.html
+++ b/localhost/index.html
@@ -15,7 +15,7 @@
     <script src="JavaScript/dado.js"></script>
     <script src="JavaScript/sorte.js"></script>
     <script src="JavaScript/regras.js"></script>
-    <script src="serve.js"></script>
+    <script src="server.js"></script>
 </head>
 <body>
         <div id="jogadores">
@@ -54,4 +54,8 @@
 
         <span class="footer__copy">&#169; Capau - Developers</span>
 </body>
+<script>
+    // localhost, replicar o servidor para todos os jogadores
+
+</script>
 </html>
