--- a/JavaScript/regras.html
+++ b/JavaScript/regras.html
@@ -11,10 +11,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
         <!--=============== SWIPER CSS ===============--> 
-        <link rel="stylesheet" href="swiper-bundle.min.css">
+        <link rel="stylesheet" href="../CSS/swiper-bundle.min.css">
 
         <!--=============== CSS ===============--> 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../CSS/style-regras.css">
 
         <title>Portal de duvidas</title>
     </head>
@@ -71,7 +71,7 @@
                                     <div class="home__indicator"></div>
     
                                     <div class="home__details-img">
-                                        <img id="sol" src="sol.png" alt="">
+                                        <img id="sol" src="../img/sol.png" alt="">
                                         <h4 class="home__details-title">Capau Jogos - Suporte</h4>
                                         <span class="home__details-subtitle">O game educacional que você merece!</span>
                                     </div>
